# consulting

./: PROJECT_BLUEPRINT.md  README.md  config.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: api.py
app/api/v1/: api.py  dependencies.py
app/api/v1/endpoints/: health.py  query.py
app/core/: config.py  db.py  init_db.py
app/models/: knowledge_document.py
app/repositories/: knowledge_repo.py
app/schemas/: query.py
app/services/: embedding_service.py  llm.py
scripts/: local_ingest.py
tax-copilot/: requirements.txt
