
[project]
name = "tax_copilot"
version = "0.1.0"
description = "AI-assisted tax analysis application."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic==2.11.5",
    "pydantic-settings==2.3.0",
    "tomli==2.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "aiohttp==3.12.7",
]